tools/juliapkg/src/api.jl


DUCKDB_API duckdb_state duckdb_append_uint32(duckdb_appender appender, uint32_t value);
"""
function duckdb_append_uint32(appender, value)
    return ccall(
        (:duckdb_append_uint32, libduckdb),
        Int32,
        (Ptr{Cvoid}, UInt32),
        appender[],
        value,
    )
end

"""
Append a uint64_t value to the appender.

DUCKDB_API duckdb_state duckdb_append_uint64(duckdb_appender appender, uint64_t value);
"""
function duckdb_append_uint64(appender, value)
    return ccall(
        (:duckdb_append_uint64, libduckdb),
        Int32,
        (Ptr{Cvoid}, UInt64),
        appender[],
        value,
    )
end

"""
Append a float value to the appender.

DUCKDB_API duckdb_state duckdb_append_float(duckdb_appender appender, float value);
"""
function duckdb_append_float(appender, value)
    return ccall(
        (:duckdb_append_float, libduckdb),
        Int32,
        (Ptr{Cvoid}, Float32),
        appender[],
        value,
    )
end

"""
Append a double value to the appender.

DUCKDB_API duckdb_state duckdb_append_double(duckdb_appender appender, double value);
"""
function duckdb_append_double(appender, value)
    return ccall(
        (:duckdb_append_double, libduckdb),
        Int32,
        (Ptr{Cvoid}, Float64),
        appender[],
        value,
    )
end

"""
Append a duckdb_date value to the appender.

DUCKDB_API duckdb_state duckdb_append_date(duckdb_appender appender, duckdb_date value);
"""
function duckdb_append_date(appender, value)
    return ccall(
        (:duckdb_append_date, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32),
        appender[],
        value,
    )
end

"""
Append a duckdb_time value to the appender.

DUCKDB_API duckdb_state duckdb_append_time(duckdb_appender appender, duckdb_time value);
"""
function duckdb_append_time(appender, value)
    return ccall(
        (:duckdb_append_time, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32),
        appender[],
        value,
    )
end

"""
Append a duckdb_timestamp value to the appender.

DUCKDB_API duckdb_state duckdb_append_timestamp(duckdb_appender appender, duckdb_timestamp value);
"""
function duckdb_append_timestamp(appender, value)
    return ccall(
        (:duckdb_append_timestamp, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32),
        appender[],
        value,
    )
end

"""
Append a duckdb_interval value to the appender.

DUCKDB_API duckdb_state duckdb_append_interval(duckdb_appender appender, duckdb_interval value);
"""
function duckdb_append_interval(appender, value)
    return ccall(
        (:duckdb_append_interval, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32),
        appender[],
        value,
    )
end

"""
Append a varchar value to the appender.

DUCKDB_API duckdb_state duckdb_append_varchar(duckdb_appender appender, const char *val);
"""
function duckdb_append_varchar(appender, value)
    return ccall(
        (:duckdb_append_varchar, libduckdb),
        Int32,
        (Ptr{Cvoid}, Ptr{UInt8}),
        appender[],
        value,
    )
end

"""
Append a varchar value to the appender.

DUCKDB_API duckdb_state duckdb_append_varchar_length(duckdb_appender appender, const char *val, idx_t length);
"""
function duckdb_append_varchar_length(appender, value, length)
    return ccall(
        (:duckdb_append_varchar_length, libduckdb),
        Int32,
        (Ptr{Cvoid}, Ptr{UInt8}, Int32),
        appender[],
        value,
        length,
    )
end

"""
Append a blob value to the appender.

DUCKDB_API duckdb_state duckdb_append_blob(duckdb_appender appender, const void *data, idx_t length);
"""
function duckdb_append_blob(appender, data, length)
    return ccall(
        (:duckdb_append_blob, libduckdb),
        Int32,
        (Ptr{Cvoid}, Ptr{Cvoid}, Int32),
        appender[],
        data,
        length,
    )
end

"""
Append a NULL value to the appender (of any type).

DUCKDB_API duckdb_state duckdb_append_null(duckdb_appender appender);
"""
function duckdb_append_null(appender)
    return ccall((:duckdb_append_null, libduckdb), Int32, (Ptr{Cvoid},), appender[])
end

#=
//===--------------------------------------------------------------------===//
// Arrow Interface
//===--------------------------------------------------------------------===//
=#


"""
Executes a SQL query within a connection and stores the full (materialized) result in an arrow structure.
If the query fails to execute, DuckDBError is returned and the error message can be retrieved by calling
`duckdb_query_arrow_error`.

Note that after running `duckdb_query_arrow`, `duckdb_destroy_arrow` must be called on the result object even if the
query fails, otherwise the error stored within the result will not be freed correctly.

* connection: The connection to perform the query in.
* query: The SQL query to run.
* out_result: The query result.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

DUCKDB_API duckdb_state duckdb_query_arrow(duckdb_connection connection, const char *query, duckdb_arrow *out_result);
"""
function duckdb_query_arrow(connection, query, out_result)
    return ccall(
        (:duckdb_query_arrow, libduckdb),
        Int32,
        (Ptr{Cvoid}, Ptr{UInt8}, Ptr{Cvoid}),
        connection[],
        query,
        out_result,
    )
end

"""
Fetch the internal arrow schema from the arrow result.

* result: The result to fetch the schema from.
* out_schema: The output schema.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

DUCKDB_API duckdb_state duckdb_query_arrow_schema(duckdb_arrow result, duckdb_arrow_schema *out_schema);
"""
function duckdb_query_arrow_schema(result, out_schema)
    return ccall(
        (:duckdb_query_arrow_schema, libduckdb),
        Int32,
        (Ptr{Cvoid}, Ptr{UInt8}),
        result,
        out_schema,
    )
end

"""
Fetch an internal arrow array from the arrow result.

This function can be called multiple time to get next chunks, which will free the previous out_array.
So consume the out_array before calling this function again.

* result: The result to fetch the array from.
* out_array: The output array.
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

DUCKDB_API duckdb_state duckdb_query_arrow_array(duckdb_arrow result, duckdb_arrow_array *out_array);
"""
function duckdb_query_arrow_array(result, out_array)
    return ccall(
        (:duckdb_query_arrow_array, libduckdb),
        Int32,
        (Ptr{Cvoid}, Ptr{Cvoid}),
        result,
        out_array,
    )
end

"""
Returns the number of columns present in a the arrow result object.

* result: The result object.
* returns: The number of columns present in the result object.

DUCKDB_API idx_t duckdb_arrow_column_count(duckdb_arrow result);
"""
function duckdb_arrow_column_count(result)
    return ccall((:duckdb_arrow_column_count, libduckdb), Int32, (Ptr{Cvoid},), result)
end

"""
Returns the number of rows present in a the arrow result object.

* result: The result object.
* returns: The number of rows present in the result object.

DUCKDB_API idx_t duckdb_arrow_row_count(duckdb_arrow result);
"""
function duckdb_arrow_row_count(result)
    return ccall((:duckdb_arrow_row_count, libduckdb), Int64, (Ptr{Cvoid},), result)
end

"""
Returns the number of rows changed by the query stored in the arrow result. This is relevant only for
INSERT/UPDATE/DELETE queries. For other queries the rows_changed will be 0.

* result: The result object.
* returns: The number of rows changed.

DUCKDB_API idx_t duckdb_arrow_rows_changed(duckdb_arrow result);
"""
function duckdb_arrow_rows_changed(result)
    return ccall((:duckdb_arrow_rows_changed, libduckdb), Int64, (Ptr{Cvoid},), result)
end

"""
Returns the error message contained within the result. The error is only set if `duckdb_query_arrow` returns
`DuckDBError`.

The error message should not be freed. It will be de-allocated when `duckdb_destroy_arrow` is called.

* result: The result object to fetch the nullmask from.
* returns: The error of the result.

DUCKDB_API const char *duckdb_query_arrow_error(duckdb_arrow result);
"""
function duckdb_query_arrow_error(result)
    return ccall((:duckdb_query_arrow_error, libduckdb), Ptr{UInt8}, (Ptr{Cvoid},), result)
end

"""
Closes the result and de-allocates all memory allocated for the arrow result.

* result: The result to destroy.

DUCKDB_API void duckdb_destroy_arrow(duckdb_arrow *result);
"""
function duckdb_destroy_arrow(result)
    return ccall((:duckdb_destroy_arrow, libduckdb), Cvoid, (Ptr{Ptr{Cvoid}},), result)
end
